--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ nav{
     text-decoration: none;
 }
 
-.presentacionHome{
+.presentationHome{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,5 +39,61 @@ nav{
     background-position: center;
     height: 35vh;
     margin-bottom: 15px;
+    opacity: 0,8;
 }
 
+.pizzaList{
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.pizzaItem{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    border: 1px solid;
+    border-color: lightgray;
+    width: 30%;
+}
+
+.descriptionPizza{
+    padding-left: 10px;
+}
+
+.price{
+    text-align: center;
+    font-weight: bold;
+    font-size:large;
+}
+
+.listIngredients{
+    list-style: none;
+    font-size: small;
+}
+
+.boxBtn{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+#btnVer{
+    background-color: deepskyblue;
+    border-radius: 5px;
+    border-style: inherit;
+    color: white;
+    width: 100px;
+}
+
+#btnSum{
+    background-color:tomato;
+    border-radius: 5px;
+    border-style: inherit;
+    color: white;
+    width: 100px;
+}
