--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: black;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 nav{
@@ -33,7 +35,8 @@ nav{
     align-items: center;
     text-align: center;
     color:lightcyan;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
     background-image: url('./assets//img/fondo1.jpg');
     background-size: cover;
     background-position: center;
@@ -57,6 +60,7 @@ nav{
     border: 1px solid;
     border-color: lightgray;
     width: 30%;
+    background-color: white;
 }
 
 .descriptionPizza{
